--- a/codes.ipynb
+++ b/codes.ipynb
@@ -1375,8 +1375,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Let's solve the first question\n",
-    "## Who prefers energy drink more? (male/female/non-binary?)"
+    "## Let's find some Demographic Insights\n",
+    "## Who prefers energy drink more? (male/female/non-binary?)\n",
+    "### To find it out we're gonna focus on two colums 'Gender' and 'Consume_frequency'"
    ]
   },
   {
@@ -1407,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1421,7 @@
        "Name: Consume_frequency, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1428,6 +1429,42 @@
    "source": [
     "df.groupby(['Gender'])['Consume_frequency'].count()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## According to this process males consume more energy drinks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Gender\n",
+       "Male          6038\n",
+       "Female        3455\n",
+       "Non-binary     507\n",
+       "Name: Consume_frequency, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(['Gender'])['Consume_frequency'].count().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
