--- a/codes.ipynb
+++ b/codes.ipynb
@@ -1407,27 +1407,280 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## We can get rid of the people who drinks rarely"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_drinks_more = df.query(\"Consume_frequency!='Rarely'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Respondent_ID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Tier</th>\n",
+       "      <th>Response_ID</th>\n",
+       "      <th>Consume_frequency</th>\n",
+       "      <th>Consume_time</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Improvements_desired</th>\n",
+       "      <th>Ingredients_expected</th>\n",
+       "      <th>Health_concerns</th>\n",
+       "      <th>Interest_in_natural_or_organic</th>\n",
+       "      <th>Marketing_channels</th>\n",
+       "      <th>Packaging_preference</th>\n",
+       "      <th>Limited_edition_packaging</th>\n",
+       "      <th>Price_range</th>\n",
+       "      <th>Purchase_location</th>\n",
+       "      <th>Typical_consumption_situations</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>120031</td>\n",
+       "      <td>Aniruddh Issac</td>\n",
+       "      <td>15-18</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>CT117</td>\n",
+       "      <td>Ahmedabad</td>\n",
+       "      <td>Tier 2</td>\n",
+       "      <td>103001</td>\n",
+       "      <td>2-3 times a week</td>\n",
+       "      <td>To stay awake during work/study</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Reduced sugar content</td>\n",
+       "      <td>Guarana</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>TV commercials</td>\n",
+       "      <td>Compact and portable cans</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>50-99</td>\n",
+       "      <td>Supermarkets</td>\n",
+       "      <td>Studying/working late</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>120032</td>\n",
+       "      <td>Trisha Rout</td>\n",
+       "      <td>19-30</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>CT118</td>\n",
+       "      <td>Pune</td>\n",
+       "      <td>Tier 2</td>\n",
+       "      <td>103002</td>\n",
+       "      <td>2-3 times a month</td>\n",
+       "      <td>Throughout the day</td>\n",
+       "      <td>...</td>\n",
+       "      <td>More natural ingredients</td>\n",
+       "      <td>Caffeine</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Not Sure</td>\n",
+       "      <td>Print media</td>\n",
+       "      <td>Compact and portable cans</td>\n",
+       "      <td>No</td>\n",
+       "      <td>50-99</td>\n",
+       "      <td>Supermarkets</td>\n",
+       "      <td>Sports/exercise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>120034</td>\n",
+       "      <td>Pranay Chand</td>\n",
+       "      <td>31-45</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>CT113</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>Tier 1</td>\n",
+       "      <td>103004</td>\n",
+       "      <td>2-3 times a week</td>\n",
+       "      <td>To stay awake during work/study</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Caffeine</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Online ads</td>\n",
+       "      <td>Compact and portable cans</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Above 150</td>\n",
+       "      <td>Supermarkets</td>\n",
+       "      <td>Sports/exercise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>120035</td>\n",
+       "      <td>Mohanlal Joshi</td>\n",
+       "      <td>19-30</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>CT120</td>\n",
+       "      <td>Lucknow</td>\n",
+       "      <td>Tier 2</td>\n",
+       "      <td>103005</td>\n",
+       "      <td>Daily</td>\n",
+       "      <td>To stay awake during work/study</td>\n",
+       "      <td>...</td>\n",
+       "      <td>More natural ingredients</td>\n",
+       "      <td>Caffeine</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Online ads</td>\n",
+       "      <td>Compact and portable cans</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>100-150</td>\n",
+       "      <td>Online retailers</td>\n",
+       "      <td>Studying/working late</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>120037</td>\n",
+       "      <td>Oorja Anne</td>\n",
+       "      <td>19-30</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>CT112</td>\n",
+       "      <td>Mumbai</td>\n",
+       "      <td>Tier 1</td>\n",
+       "      <td>103007</td>\n",
+       "      <td>2-3 times a month</td>\n",
+       "      <td>To stay awake during work/study</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Guarana</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Online ads</td>\n",
+       "      <td>Innovative bottle design</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>100-150</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Sports/exercise</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 29 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Respondent_ID            Name    Age  Gender City_ID       City    Tier  \\\n",
+       "0         120031  Aniruddh Issac  15-18  Female   CT117  Ahmedabad  Tier 2   \n",
+       "1         120032     Trisha Rout  19-30    Male   CT118       Pune  Tier 2   \n",
+       "3         120034    Pranay Chand  31-45  Female   CT113  Bangalore  Tier 1   \n",
+       "4         120035  Mohanlal Joshi  19-30  Female   CT120    Lucknow  Tier 2   \n",
+       "6         120037      Oorja Anne  19-30    Male   CT112     Mumbai  Tier 1   \n",
+       "\n",
+       "   Response_ID  Consume_frequency                     Consume_time  ...  \\\n",
+       "0       103001   2-3 times a week  To stay awake during work/study  ...   \n",
+       "1       103002  2-3 times a month               Throughout the day  ...   \n",
+       "3       103004   2-3 times a week  To stay awake during work/study  ...   \n",
+       "4       103005              Daily  To stay awake during work/study  ...   \n",
+       "6       103007  2-3 times a month  To stay awake during work/study  ...   \n",
+       "\n",
+       "       Improvements_desired Ingredients_expected Health_concerns  \\\n",
+       "0     Reduced sugar content              Guarana              No   \n",
+       "1  More natural ingredients             Caffeine             Yes   \n",
+       "3                     Other             Caffeine              No   \n",
+       "4  More natural ingredients             Caffeine             Yes   \n",
+       "6                     Other              Guarana             Yes   \n",
+       "\n",
+       "  Interest_in_natural_or_organic Marketing_channels  \\\n",
+       "0                            Yes     TV commercials   \n",
+       "1                       Not Sure        Print media   \n",
+       "3                            Yes         Online ads   \n",
+       "4                            Yes         Online ads   \n",
+       "6                             No         Online ads   \n",
+       "\n",
+       "        Packaging_preference Limited_edition_packaging Price_range  \\\n",
+       "0  Compact and portable cans                       Yes       50-99   \n",
+       "1  Compact and portable cans                        No       50-99   \n",
+       "3  Compact and portable cans                        No   Above 150   \n",
+       "4  Compact and portable cans                       Yes     100-150   \n",
+       "6   Innovative bottle design                       Yes     100-150   \n",
+       "\n",
+       "  Purchase_location Typical_consumption_situations  \n",
+       "0      Supermarkets          Studying/working late  \n",
+       "1      Supermarkets                Sports/exercise  \n",
+       "3      Supermarkets                Sports/exercise  \n",
+       "4  Online retailers          Studying/working late  \n",
+       "6             Other                Sports/exercise  \n",
+       "\n",
+       "[5 rows x 29 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_drinks_more.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using groupby to get in general count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Gender\n",
-       "Female        3455\n",
-       "Male          6038\n",
-       "Non-binary     507\n",
+       "Female        2793\n",
+       "Male          4852\n",
+       "Non-binary     414\n",
        "Name: Consume_frequency, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby(['Gender'])['Consume_frequency'].count()"
+    "df_drinks_more.groupby(['Gender'])['Consume_frequency'].count()"
    ]
   },
   {
@@ -1464,7 +1717,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## To be more presize we can assign a weight "
+   ]
   },
   {
    "cell_type": "code",
