--- a/codes.ipynb
+++ b/codes.ipynb
@@ -1692,33 +1692,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Gender\n",
-       "Male          6038\n",
-       "Female        3455\n",
-       "Non-binary     507\n",
+       "Male          4852\n",
+       "Female        2793\n",
+       "Non-binary     414\n",
        "Name: Consume_frequency, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby(['Gender'])['Consume_frequency'].count().sort_values(ascending=False)"
+    "df_drinks_more.groupby(['Gender'])['Consume_frequency'].count().sort_values(ascending=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## To be more presize we can assign a weight "
+    "## To be more presize we can assign a weight accoring to the consumption frequency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weights = {\n",
+    "    'Daily': 30,\n",
+    "    '2-3 times a week': 12,\n",
+    "    'Once a week': 4,\n",
+    "    '2-3 times a month': 3,\n",
+    "}"
    ]
   },
   {
@@ -1727,19 +1741,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "\n",
-    "# Define the weights for each consumption frequency\n",
-    "weights = {\n",
-    "    'Daily': 5,\n",
-    "    '2-3 times a week': 4,\n",
-    "    'Once a week': 3,\n",
-    "    '2-3 times a month': 2,\n",
-    "    'Rarely': 1  # You can choose to exclude this if not relevant\n",
-    "}\n",
     "\n",
     "# Map the weights to the 'Consume_frequency' column\n",
-    "df['Frequency_weight'] = df['Consume_frequency'].map(weights)\n",
+    "df['Consume_weight'] = df['Consume_frequency'].map(weights)\n",
     "\n",
     "# Group by Gender and calculate the weighted score for each gender\n",
     "gender_preference = df.groupby('Gender')['Frequency_weight'].sum()\n",
