--- a/codes.ipynb
+++ b/codes.ipynb
@@ -1415,16 +1415,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_drinks_more = df.query(\"Consume_frequency!='Rarely'\")"
+    "df_drinks_more = df.query(\"Consume_frequency!='Rarely'\").copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1643,7 +1643,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1661,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1674,7 +1674,7 @@
        "Name: Consume_frequency, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1692,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1705,7 +1705,7 @@
        "Name: Consume_frequency, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1723,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1736,6 +1736,257 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Now we can create a new column and map these weights to the 'Consume_frequency' column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_drinks_more['Consume_weight'] = df['Consume_frequency'].map(weights)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let's check it out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Respondent_ID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Tier</th>\n",
+       "      <th>Response_ID</th>\n",
+       "      <th>Consume_frequency</th>\n",
+       "      <th>Consume_time</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Ingredients_expected</th>\n",
+       "      <th>Health_concerns</th>\n",
+       "      <th>Interest_in_natural_or_organic</th>\n",
+       "      <th>Marketing_channels</th>\n",
+       "      <th>Packaging_preference</th>\n",
+       "      <th>Limited_edition_packaging</th>\n",
+       "      <th>Price_range</th>\n",
+       "      <th>Purchase_location</th>\n",
+       "      <th>Typical_consumption_situations</th>\n",
+       "      <th>Consume_weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>120031</td>\n",
+       "      <td>Aniruddh Issac</td>\n",
+       "      <td>15-18</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>CT117</td>\n",
+       "      <td>Ahmedabad</td>\n",
+       "      <td>Tier 2</td>\n",
+       "      <td>103001</td>\n",
+       "      <td>2-3 times a week</td>\n",
+       "      <td>To stay awake during work/study</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Guarana</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>TV commercials</td>\n",
+       "      <td>Compact and portable cans</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>50-99</td>\n",
+       "      <td>Supermarkets</td>\n",
+       "      <td>Studying/working late</td>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>120032</td>\n",
+       "      <td>Trisha Rout</td>\n",
+       "      <td>19-30</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>CT118</td>\n",
+       "      <td>Pune</td>\n",
+       "      <td>Tier 2</td>\n",
+       "      <td>103002</td>\n",
+       "      <td>2-3 times a month</td>\n",
+       "      <td>Throughout the day</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Caffeine</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Not Sure</td>\n",
+       "      <td>Print media</td>\n",
+       "      <td>Compact and portable cans</td>\n",
+       "      <td>No</td>\n",
+       "      <td>50-99</td>\n",
+       "      <td>Supermarkets</td>\n",
+       "      <td>Sports/exercise</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>120034</td>\n",
+       "      <td>Pranay Chand</td>\n",
+       "      <td>31-45</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>CT113</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>Tier 1</td>\n",
+       "      <td>103004</td>\n",
+       "      <td>2-3 times a week</td>\n",
+       "      <td>To stay awake during work/study</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Caffeine</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Online ads</td>\n",
+       "      <td>Compact and portable cans</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Above 150</td>\n",
+       "      <td>Supermarkets</td>\n",
+       "      <td>Sports/exercise</td>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>120035</td>\n",
+       "      <td>Mohanlal Joshi</td>\n",
+       "      <td>19-30</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>CT120</td>\n",
+       "      <td>Lucknow</td>\n",
+       "      <td>Tier 2</td>\n",
+       "      <td>103005</td>\n",
+       "      <td>Daily</td>\n",
+       "      <td>To stay awake during work/study</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Caffeine</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Online ads</td>\n",
+       "      <td>Compact and portable cans</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>100-150</td>\n",
+       "      <td>Online retailers</td>\n",
+       "      <td>Studying/working late</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>120037</td>\n",
+       "      <td>Oorja Anne</td>\n",
+       "      <td>19-30</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>CT112</td>\n",
+       "      <td>Mumbai</td>\n",
+       "      <td>Tier 1</td>\n",
+       "      <td>103007</td>\n",
+       "      <td>2-3 times a month</td>\n",
+       "      <td>To stay awake during work/study</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Guarana</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Online ads</td>\n",
+       "      <td>Innovative bottle design</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>100-150</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Sports/exercise</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 30 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Respondent_ID            Name    Age  Gender City_ID       City    Tier  \\\n",
+       "0         120031  Aniruddh Issac  15-18  Female   CT117  Ahmedabad  Tier 2   \n",
+       "1         120032     Trisha Rout  19-30    Male   CT118       Pune  Tier 2   \n",
+       "3         120034    Pranay Chand  31-45  Female   CT113  Bangalore  Tier 1   \n",
+       "4         120035  Mohanlal Joshi  19-30  Female   CT120    Lucknow  Tier 2   \n",
+       "6         120037      Oorja Anne  19-30    Male   CT112     Mumbai  Tier 1   \n",
+       "\n",
+       "   Response_ID  Consume_frequency                     Consume_time  ...  \\\n",
+       "0       103001   2-3 times a week  To stay awake during work/study  ...   \n",
+       "1       103002  2-3 times a month               Throughout the day  ...   \n",
+       "3       103004   2-3 times a week  To stay awake during work/study  ...   \n",
+       "4       103005              Daily  To stay awake during work/study  ...   \n",
+       "6       103007  2-3 times a month  To stay awake during work/study  ...   \n",
+       "\n",
+       "  Ingredients_expected Health_concerns Interest_in_natural_or_organic  \\\n",
+       "0              Guarana              No                            Yes   \n",
+       "1             Caffeine             Yes                       Not Sure   \n",
+       "3             Caffeine              No                            Yes   \n",
+       "4             Caffeine             Yes                            Yes   \n",
+       "6              Guarana             Yes                             No   \n",
+       "\n",
+       "  Marketing_channels       Packaging_preference  Limited_edition_packaging  \\\n",
+       "0     TV commercials  Compact and portable cans                        Yes   \n",
+       "1        Print media  Compact and portable cans                         No   \n",
+       "3         Online ads  Compact and portable cans                         No   \n",
+       "4         Online ads  Compact and portable cans                        Yes   \n",
+       "6         Online ads   Innovative bottle design                        Yes   \n",
+       "\n",
+       "  Price_range Purchase_location Typical_consumption_situations Consume_weight  \n",
+       "0       50-99      Supermarkets          Studying/working late           12.0  \n",
+       "1       50-99      Supermarkets                Sports/exercise            3.0  \n",
+       "3   Above 150      Supermarkets                Sports/exercise           12.0  \n",
+       "4     100-150  Online retailers          Studying/working late           30.0  \n",
+       "6     100-150             Other                Sports/exercise            3.0  \n",
+       "\n",
+       "[5 rows x 30 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_drinks_more.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1743,8 +1994,8 @@
    "source": [
     "\n",
     "\n",
-    "# Map the weights to the 'Consume_frequency' column\n",
-    "df['Consume_weight'] = df['Consume_frequency'].map(weights)\n",
+    "\n",
+    "\n",
     "\n",
     "# Group by Gender and calculate the weighted score for each gender\n",
     "gender_preference = df.groupby('Gender')['Frequency_weight'].sum()\n",
