--- a/codes.ipynb
+++ b/codes.ipynb
@@ -1984,28 +1984,65 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Now if we apply the same groupby to get the counts"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Gender\n",
+       "Male          56434.0\n",
+       "Female        32475.0\n",
+       "Non-binary     4638.0\n",
+       "Name: Consume_weight, dtype: float64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_drinks_more.groupby('Gender')['Consume_weight'].sum().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## So we'll store the first element"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Group by Gender and calculate the weighted score for each gender\n",
-    "gender_preference = df.groupby('Gender')['Frequency_weight'].sum()\n",
-    "\n",
-    "# Output the results\n",
-    "print(gender_preference)\n",
-    "\n",
-    "# Determine which gender has the highest weighted preference\n",
-    "most_preference_gender = gender_preference.idxmax()\n",
-    "print(f\"The gender that prefers energy drinks the most is: {most_preference_gender}\")\n"
+    "gender_preffers_more_energy_drinks = df_drinks_more.groupby('Gender')['Consume_weight'].sum().sort_values(ascending=False).index[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The gender that prefers energy drinks the most is: Male\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The gender that prefers energy drinks the most is:\",gender_preffers_more_energy_drinks)\n"
    ]
   }
  ],
