--- a/codes.ipynb
+++ b/codes.ipynb
@@ -2049,7 +2049,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Let's find out what age group prefers energy drinks more "
+    "## Let's find out what age group prefers energy drinks more, we can use the same dataframe"
    ]
   },
   {
@@ -2273,6 +2273,32 @@
    ],
    "source": [
     "df_drinks_more.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Age\n",
+       "19-30    51309.0\n",
+       "31-45    22786.0\n",
+       "15-18    14020.0\n",
+       "46-65     3662.0\n",
+       "65+       1770.0\n",
+       "Name: Consume_weight, dtype: float64"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_drinks_more.groupby(['Age'])['Consume_weight'].sum().sort_values(ascending=False)"
    ]
   },
   {
