--- a/codes.ipynb
+++ b/codes.ipynb
@@ -2030,7 +2030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2042,7 +2042,7 @@
     }
    ],
    "source": [
-    "print(\"The gender that prefers energy drinks the most is:\",gender_preffers_more_energy_drinks)\n"
+    "print(\"The gender that prefers energy drinks the most is:\",gender_preffers_more_energy_drinks)"
    ]
   },
   {
@@ -2299,6 +2299,39 @@
    ],
    "source": [
     "df_drinks_more.groupby(['Age'])['Consume_weight'].sum().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Finally to the age group that consumes more enery drinks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age_group_consume_more = df_drinks_more.groupby(['Age'])['Consume_weight'].sum().sort_values(ascending=False).index[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The age group that consume more energy drinks is: 19-30\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The age group that consume more energy drinks is:\",age_group_consume_more)"
    ]
   },
   {
