--- a/codes.ipynb
+++ b/codes.ipynb
@@ -2368,6 +2368,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## First let's create a dataframe for the youth or that perticular age group"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 66,
    "metadata": {},
@@ -2378,7 +2385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -2546,244 +2553,64 @@
        "      <td>Gyms and fitness centers</td>\n",
        "      <td>Social outings/parties</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9993</th>\n",
-       "      <td>130024</td>\n",
-       "      <td>Madhav Sheth</td>\n",
-       "      <td>19-30</td>\n",
-       "      <td>Non-binary</td>\n",
-       "      <td>CT113</td>\n",
-       "      <td>Bangalore</td>\n",
-       "      <td>Tier 1</td>\n",
-       "      <td>112994</td>\n",
-       "      <td>Daily</td>\n",
-       "      <td>Before exercise</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Reduced sugar content</td>\n",
-       "      <td>Vitamins</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Online ads</td>\n",
-       "      <td>Compact and portable cans</td>\n",
-       "      <td>Not Sure</td>\n",
-       "      <td>100-150</td>\n",
-       "      <td>Gyms and fitness centers</td>\n",
-       "      <td>Studying/working late</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9994</th>\n",
-       "      <td>130025</td>\n",
-       "      <td>Drishya Kale</td>\n",
-       "      <td>19-30</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>CT112</td>\n",
-       "      <td>Mumbai</td>\n",
-       "      <td>Tier 1</td>\n",
-       "      <td>112995</td>\n",
-       "      <td>2-3 times a week</td>\n",
-       "      <td>Throughout the day</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Wider range of flavors</td>\n",
-       "      <td>Caffeine</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Print media</td>\n",
-       "      <td>Compact and portable cans</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Above 150</td>\n",
-       "      <td>Supermarkets</td>\n",
-       "      <td>Other</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9996</th>\n",
-       "      <td>130027</td>\n",
-       "      <td>Yuvraj  Agrawal</td>\n",
-       "      <td>15-18</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>CT113</td>\n",
-       "      <td>Bangalore</td>\n",
-       "      <td>Tier 1</td>\n",
-       "      <td>112997</td>\n",
-       "      <td>Daily</td>\n",
-       "      <td>To stay awake during work/study</td>\n",
-       "      <td>...</td>\n",
-       "      <td>More natural ingredients</td>\n",
-       "      <td>Caffeine</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>TV commercials</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>50-99</td>\n",
-       "      <td>Online retailers</td>\n",
-       "      <td>Social outings/parties</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9998</th>\n",
-       "      <td>130029</td>\n",
-       "      <td>Jayan Goyal</td>\n",
-       "      <td>19-30</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>CT113</td>\n",
-       "      <td>Bangalore</td>\n",
-       "      <td>Tier 1</td>\n",
-       "      <td>112999</td>\n",
-       "      <td>2-3 times a week</td>\n",
-       "      <td>To stay awake during work/study</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>Sugar</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Online ads</td>\n",
-       "      <td>Compact and portable cans</td>\n",
-       "      <td>Not Sure</td>\n",
-       "      <td>50-99</td>\n",
-       "      <td>Supermarkets</td>\n",
-       "      <td>Studying/working late</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9999</th>\n",
-       "      <td>130030</td>\n",
-       "      <td>Piya Varty</td>\n",
-       "      <td>15-18</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>CT112</td>\n",
-       "      <td>Mumbai</td>\n",
-       "      <td>Tier 1</td>\n",
-       "      <td>113000</td>\n",
-       "      <td>Daily</td>\n",
-       "      <td>For mental alertness</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Wider range of flavors</td>\n",
-       "      <td>Caffeine</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Not Sure</td>\n",
-       "      <td>Print media</td>\n",
-       "      <td>Eco-friendly design</td>\n",
-       "      <td>No</td>\n",
-       "      <td>50-99</td>\n",
-       "      <td>Supermarkets</td>\n",
-       "      <td>Sports/exercise</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>7008 rows × 29 columns</p>\n",
+       "<p>5 rows × 29 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Respondent_ID             Name    Age      Gender City_ID       City  \\\n",
-       "0            120031   Aniruddh Issac  15-18      Female   CT117  Ahmedabad   \n",
-       "1            120032      Trisha Rout  19-30        Male   CT118       Pune   \n",
-       "2            120033     Yuvraj  Virk  15-18        Male   CT116  Hyderabad   \n",
-       "4            120035   Mohanlal Joshi  19-30      Female   CT120    Lucknow   \n",
-       "5            120036    Zeeshan Ratta  19-30      Female   CT118       Pune   \n",
-       "...             ...              ...    ...         ...     ...        ...   \n",
-       "9993         130024     Madhav Sheth  19-30  Non-binary   CT113  Bangalore   \n",
-       "9994         130025     Drishya Kale  19-30        Male   CT112     Mumbai   \n",
-       "9996         130027  Yuvraj  Agrawal  15-18        Male   CT113  Bangalore   \n",
-       "9998         130029      Jayan Goyal  19-30        Male   CT113  Bangalore   \n",
-       "9999         130030       Piya Varty  15-18        Male   CT112     Mumbai   \n",
+       "   Respondent_ID            Name    Age  Gender City_ID       City    Tier  \\\n",
+       "0         120031  Aniruddh Issac  15-18  Female   CT117  Ahmedabad  Tier 2   \n",
+       "1         120032     Trisha Rout  19-30    Male   CT118       Pune  Tier 2   \n",
+       "2         120033    Yuvraj  Virk  15-18    Male   CT116  Hyderabad  Tier 1   \n",
+       "4         120035  Mohanlal Joshi  19-30  Female   CT120    Lucknow  Tier 2   \n",
+       "5         120036   Zeeshan Ratta  19-30  Female   CT118       Pune  Tier 2   \n",
        "\n",
-       "        Tier  Response_ID  Consume_frequency                     Consume_time  \\\n",
-       "0     Tier 2       103001   2-3 times a week  To stay awake during work/study   \n",
-       "1     Tier 2       103002  2-3 times a month               Throughout the day   \n",
-       "2     Tier 1       103003             Rarely                  Before exercise   \n",
-       "4     Tier 2       103005              Daily  To stay awake during work/study   \n",
-       "5     Tier 2       103006             Rarely             For mental alertness   \n",
-       "...      ...          ...                ...                              ...   \n",
-       "9993  Tier 1       112994              Daily                  Before exercise   \n",
-       "9994  Tier 1       112995   2-3 times a week               Throughout the day   \n",
-       "9996  Tier 1       112997              Daily  To stay awake during work/study   \n",
-       "9998  Tier 1       112999   2-3 times a week  To stay awake during work/study   \n",
-       "9999  Tier 1       113000              Daily             For mental alertness   \n",
+       "   Response_ID  Consume_frequency                     Consume_time  ...  \\\n",
+       "0       103001   2-3 times a week  To stay awake during work/study  ...   \n",
+       "1       103002  2-3 times a month               Throughout the day  ...   \n",
+       "2       103003             Rarely                  Before exercise  ...   \n",
+       "4       103005              Daily  To stay awake during work/study  ...   \n",
+       "5       103006             Rarely             For mental alertness  ...   \n",
        "\n",
-       "      ...      Improvements_desired Ingredients_expected Health_concerns  \\\n",
-       "0     ...     Reduced sugar content              Guarana              No   \n",
-       "1     ...  More natural ingredients             Caffeine             Yes   \n",
-       "2     ...  More natural ingredients             Caffeine              No   \n",
-       "4     ...  More natural ingredients             Caffeine             Yes   \n",
-       "5     ...    Wider range of flavors             Vitamins             Yes   \n",
-       "...   ...                       ...                  ...             ...   \n",
-       "9993  ...     Reduced sugar content             Vitamins              No   \n",
-       "9994  ...    Wider range of flavors             Caffeine             Yes   \n",
-       "9996  ...  More natural ingredients             Caffeine              No   \n",
-       "9998  ...                     Other                Sugar             Yes   \n",
-       "9999  ...    Wider range of flavors             Caffeine             Yes   \n",
+       "       Improvements_desired Ingredients_expected Health_concerns  \\\n",
+       "0     Reduced sugar content              Guarana              No   \n",
+       "1  More natural ingredients             Caffeine             Yes   \n",
+       "2  More natural ingredients             Caffeine              No   \n",
+       "4  More natural ingredients             Caffeine             Yes   \n",
+       "5    Wider range of flavors             Vitamins             Yes   \n",
        "\n",
-       "     Interest_in_natural_or_organic Marketing_channels  \\\n",
-       "0                               Yes     TV commercials   \n",
-       "1                          Not Sure        Print media   \n",
-       "2                               Yes         Online ads   \n",
-       "4                               Yes         Online ads   \n",
-       "5                               Yes     TV commercials   \n",
-       "...                             ...                ...   \n",
-       "9993                            Yes         Online ads   \n",
-       "9994                            Yes        Print media   \n",
-       "9996                             No     TV commercials   \n",
-       "9998                            Yes         Online ads   \n",
-       "9999                       Not Sure        Print media   \n",
+       "  Interest_in_natural_or_organic Marketing_channels  \\\n",
+       "0                            Yes     TV commercials   \n",
+       "1                       Not Sure        Print media   \n",
+       "2                            Yes         Online ads   \n",
+       "4                            Yes         Online ads   \n",
+       "5                            Yes     TV commercials   \n",
        "\n",
-       "           Packaging_preference Limited_edition_packaging Price_range  \\\n",
-       "0     Compact and portable cans                       Yes       50-99   \n",
-       "1     Compact and portable cans                        No       50-99   \n",
-       "2      Innovative bottle design                  Not Sure     100-150   \n",
-       "4     Compact and portable cans                       Yes     100-150   \n",
-       "5                         Other                       Yes   Above 150   \n",
-       "...                         ...                       ...         ...   \n",
-       "9993  Compact and portable cans                  Not Sure     100-150   \n",
-       "9994  Compact and portable cans                        No   Above 150   \n",
-       "9996                      Other                       Yes       50-99   \n",
-       "9998  Compact and portable cans                  Not Sure       50-99   \n",
-       "9999        Eco-friendly design                        No       50-99   \n",
+       "        Packaging_preference Limited_edition_packaging Price_range  \\\n",
+       "0  Compact and portable cans                       Yes       50-99   \n",
+       "1  Compact and portable cans                        No       50-99   \n",
+       "2   Innovative bottle design                  Not Sure     100-150   \n",
+       "4  Compact and portable cans                       Yes     100-150   \n",
+       "5                      Other                       Yes   Above 150   \n",
        "\n",
-       "             Purchase_location Typical_consumption_situations  \n",
-       "0                 Supermarkets          Studying/working late  \n",
-       "1                 Supermarkets                Sports/exercise  \n",
-       "2                 Supermarkets          Studying/working late  \n",
-       "4             Online retailers          Studying/working late  \n",
-       "5     Gyms and fitness centers         Social outings/parties  \n",
-       "...                        ...                            ...  \n",
-       "9993  Gyms and fitness centers          Studying/working late  \n",
-       "9994              Supermarkets                          Other  \n",
-       "9996          Online retailers         Social outings/parties  \n",
-       "9998              Supermarkets          Studying/working late  \n",
-       "9999              Supermarkets                Sports/exercise  \n",
+       "          Purchase_location Typical_consumption_situations  \n",
+       "0              Supermarkets          Studying/working late  \n",
+       "1              Supermarkets                Sports/exercise  \n",
+       "2              Supermarkets          Studying/working late  \n",
+       "4          Online retailers          Studying/working late  \n",
+       "5  Gyms and fitness centers         Social outings/parties  \n",
        "\n",
-       "[7008 rows x 29 columns]"
+       "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "youth_marketing_channels"
+    "youth_marketing_channels.head()"
    ]
   },
   {
