--- a/codes.ipynb
+++ b/codes.ipynb
@@ -2614,11 +2614,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Now we can just count unique values of marketing channels"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "youth_marketing_channels.groupby('')"
+   ]
   }
  ],
  "metadata": {
