--- a/codes.ipynb
+++ b/codes.ipynb
@@ -2376,16 +2376,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "youth_marketing_channels = df.query(\"(Age == '15-18')|(Age == '19-30')\").copy()"
+    "df_youth_marketing_channels = df.query(\"(Age == '15-18')|(Age == '19-30')\").copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -2604,13 +2604,13 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "youth_marketing_channels.head()"
+    "df_youth_marketing_channels.head()"
    ]
   },
   {
@@ -2622,11 +2622,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Marketing_channels\n",
+       "Online ads            3373\n",
+       "TV commercials        1785\n",
+       "Other                  702\n",
+       "Outdoor billboards     702\n",
+       "Print media            446\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_youth_marketing_channels['Marketing_channels'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "youth_marketing_channels.groupby('')"
+    "youth_marketing_channels"
    ]
   }
  ],
